Fixed spacing issue on html all pages

--- a/css/joke.css
+++ b/css/joke.css
@@ -399,7 +399,8 @@ nav,
     width: 100%;
     justify-content: center;
     display: flex;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #goToQuiz {
@@ -415,7 +416,8 @@ nav,
     width: 100%;
     justify-content: center;
     display: flex;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #goToAdopt {
